# Liouville-Lanczos

./: .gitignore  DMRG.py  README.md  pyproject.toml
LiouvilleLanczos/: Chebyshev.py  Green.py  Lanczos.py  Lanczos_components.py  __init__.py  epsilon_algo.py  matrix_impl.py  operator_evolution.py
LiouvilleLanczos/Quantum_computer/: Adapt.py  Hamiltonian.py  Hubbard_EvolvingAnsatz.py  LayoutJordanWigner.py  Mapping.py  QC_lanczos.py  adapt_pools.py  ansatz.py  ecr_echo_rzx_weyl_decomposition.py  err_mitig_inprod.py  pauliarray_lanczos.py
LiouvilleLanczos/Quantum_computer/VQE_stuff/: Adapt.py  Note.txt  __init__.py  adapt_pools.py  ansatz.py
LiouvilleLanczos/Tensor_networks/: MPO_compress.py  Operators.py  TN_lanczos.py  __init__.py  compress_algs.py  generate_simple_MPO.py  sweeper.py
article/Figures/: 4sites_simul.py
tests/: 2siteHub.py  2siteHub_E0.py  2siteHub_queb.py  2siteHub_smart_spo.py  4siteHub.py  Figures_QC.py  Green.py  KimElectric.py  LL-notebook.ipynb  NPA_test.py  VQE.py  VQE_adapt.py  chea_test.py  heavy_hex_heisen.py  one_body.py  slater.ipynb  spo_test.py  test_sweeper.py  test_sweepers.py
tests/results/: V2_QC_hubbard2site_data_ibm_quebec_12_11_23.py  V2_QC_hubbard2site_data_ibm_quebec_14_46_13.py  V2_QC_hubbard2site_data_ibm_quebec_15_15_58.py  V2_QC_hubbard2site_data_ibm_quebec_22_24_34.py  V2_QC_hubbard2site_data_ibm_quebec_23_1_3.py  V2_QC_hubbard2site_data_ibm_quebec_5_25_16.py
