[build-system]
requires = ["flit_core >=3.2,<4","wheel"]
build-backend = "flit_core.buildapi"

[project]
name = "LiouvilleLanczos"
authors = [{name = "Alexandre Foley", email = "Alexandre.Foley@usherbrooke.ca"}]
dynamic = ["version", "description"]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "numpy",
    "scipy",
    "qiskit",
    "qiskit-nature >= 0.5",
]

[project.optional-dependencies]
TensorNetworks = [
    "quimb",
]
pauliarray = [
    "pauliarray",
]
test = [
    "matplotlib",
    "seaborn",
    "qiskit_ibm_provider",
]
doc = ["sphinx"]
[project.urls]
Home = "https://github.com/espace-ibmq-sherbrooke/wFunction.git"
